Desabilitando autenticacao para teste em desenvolvimento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.data.mongodb.host=ds251819.mlab.com
 spring.data.mongodb.port=51819
 spring.data.mongodb.username=hitssuser
 spring.data.mongodb.password=hitzz1@@
+security.ignored=/**
+spring.security.enabled=false
+management.security.enabled=false
+security.basic.enabled=false
